full-moon/tests/roblox_cases/fail/parser/declared_functions/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/declared_functions
---
error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:9
  │
1 │ declare function foo(a: string): number
  │         ^^^^^^^^

error[ast]: expected `function` or `local function` after attribute
  ┌─ source.lua:4:1
  │
4 │ declare function bar(b: number)
  │ ^^^^^^^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:4:9
  │
4 │ declare function bar(b: number)
  │         ^^^^^^^^

error[ast]: expected `end` to close function body block
  ┌─ source.lua:4:31
  │
4 │ declare function bar(b: number)
  │                               ^
